@@ -32,7 +32,7 @@ struct entity {
     int code;
 };
 
-#define TOTAL_KEYWORDS 259
+#define TOTAL_KEYWORDS 261
 #define MIN_WORD_LENGTH 2
 #define MAX_WORD_LENGTH 8
 #define MIN_HASH_VALUE 2
@@ -56,7 +56,7 @@ hash (register const char *str, register unsigned int len)
       1477, 1477, 1477, 1477, 1477, 1477, 1477, 1477, 1477, 1477,
       1477, 1477, 1477, 1477, 1477, 1477, 1477, 1477, 1477, 1477,
       1477, 1477, 1477, 1477, 1477, 1477, 1477, 1477, 1477,    0,
-        20,   15,   10, 1477, 1477, 1477, 1477, 1477, 1477, 1477,
+        15,   20,   10, 1477, 1477, 1477, 1477, 1477, 1477, 1477,
       1477, 1477, 1477, 1477, 1477,   55,    5,    5,    0,  225,
       1477,   10,    0,  140, 1477,   15,    0,    0,   10,  105,
         30,    0,    5,   15,    0,   25, 1477, 1477,    5,   20,
@@ -144,9 +144,10 @@ static const struct entity wordlist[] =
     {"frac14", 0x00bc},
     {"darr", 0x2193},
     {"frac12", 0x00bd},
+    {"COPY", 0x00a9},
     {"uArr", 0x21d1},
-    {"frac34", 0x00be},
     {"or", 0x2228},
+    {"frac34", 0x00be},
     {"bull", 0x2022},
     {"loz", 0x25ca},
     {"brvbar", 0x00a6},
@@ -169,6 +170,7 @@ static const struct entity wordlist[] =
     {"Ntilde", 0x00d1},
     {"Ucirc", 0x00db},
     {"forall", 0x2200},
+    {"REG", 0x00ae},
     {"acute", 0x00b4},
     {"aacute", 0x00e1},
     {"eacute", 0x00e9},
@@ -321,8 +323,8 @@ static const struct entity wordlist[] =
     {"Gamma", 0x0393},
     {"supe", 0x2287},
     {"supl", 0x00b9},
-    {"sup3", 0x00b3},
     {"sup2", 0x00b2},
+    {"sup3", 0x00b3},
     {"sbquo", 0x201a},
     {"empty", 0x2205},
     {"isin", 0x2208},
@@ -389,157 +391,141 @@ static const short lookup[] =
       -1,   -1,   -1,   -1,   32,   -1,   -1,   33,
       -1,   34,   -1,   -1,   -1,   -1,   -1,   -1,
       -1,   -1,   -1,   -1,   35,   -1,   -1,   36,
-      -1,   -1,   -1,   -1,   -1,   -1,   37,   -1,
-      -1,   38,   -1,   39,   40,   -1,   -1,   -1,
-      -1,   -1,   -1,   41,   -1,   -1,   -1,   42,
-      -1,   -1,   43,   -1,   -1,   -1,   -1,   -1,
-      -1,   -1,   -1,   44,   -1,   -1,   -1,   -1,
-      -1,   45,   -1,   -1,   -1,   46,   47,   -1,
-      -1,   48,   49,   50,   -1,   -1,   51,   52,
-      53,   -1,   -1,   54,   55,   56,   -1,   -1,
-      -1,   57,   58,   -1,   59,   -1,   -1,   60,
-      -1,   -1,   -1,   61,   -1,   -1,   -1,   -1,
-      -1,   62,   -1,   -1,   -1,   63,   64,   -1,
-      -1,   -1,   -1,   65,   -1,   -1,   -1,   -1,
-      66,   -1,   67,   -1,   -1,   68,   -1,   69,
-      -1,   70,   71,   -1,   -1,   -1,   72,   73,
-      -1,   -1,   -1,   -1,   74,   -1,   -1,   -1,
-      -1,   -1,   -1,   -1,   -1,   75,   -1,   -1,
-      -1,   76,   -1,   77,   -1,   -1,   78,   -1,
-      -1,   -1,   -1,   -1,   -1,   79,   -1,   -1,
-      -1,   80,   81,   82,   -1,   83,   -1,   84,
-      -1,   -1,   -1,   85,   86,   -1,   -1,   -1,
-      87,   -1,   -1,   -1,   88,   89,   90,   -1,
-      91,   -1,   -1,   92,   -1,   -1,   -1,   -1,
-      -1,   -1,   -1,   -1,   -1,   93,   -1,   94,
-      95,   96,   -1,   -1,   97,   -1,   98,   99,
-      -1,  100,   -1,   -1,  101,   -1, -622,   -1,
-     104,  105, -157,   -2,  106,   -1,  107,   -1,
-      -1,   -1,  108,  109,   -1,   -1,  110,  111,
-      -1,   -1,   -1,   -1,  112,  113,   -1,   -1,
-      -1,  114,  115,   -1,  116,   -1,   -1,  117,
-      -1,   -1,   -1,  118,   -1,   -1,  119,   -1,
-     120,  121,   -1,   -1,   -1,   -1,   -1,   -1,
-      -1,   -1,  122,  123,   -1,   -1,  124,   -1,
-     125,   -1,  126,   -1,   -1,   -1,  127,   -1,
-      -1,   -1,  128,   -1,   -1,  129,  130,   -1,
-     131,   -1,  132,  133,   -1,   -1,   -1,   -1,
-      -1,  134,   -1,   -1,  135,   -1,   -1,   -1,
+      -1,   37,   -1,   -1,   38,   -1,   -1,   -1,
+      -1,   39,   -1,   -1,   40,   -1,   -1,   -1,
+      41,   -1,   -1,   42,   -1,   -1,   -1,   43,
+      -1,   -1,   44,   -1,   -1,   -1,   -1,   -1,
+      -1,   -1,   -1,   45,   -1,   -1,   -1,   -1,
+      -1,   46,   -1,   -1,   -1,   47,   48,   -1,
+      -1,   49,   50,   51,   -1,   -1,   52,   53,
+      54,   -1,   -1,   55,   56,   57,   -1,   -1,
+      -1,   58,   59,   -1,   60,   -1,   -1,   61,
+      -1,   -1,   -1,   62,   -1,   -1,   -1,   -1,
+      -1,   63,   -1,   64,   -1,   65,   66,   -1,
+      -1,   -1,   -1,   67,   -1,   -1,   -1,   -1,
+      68,   -1,   69,   -1,   -1,   70,   -1,   71,
+      -1,   72,   73,   -1,   -1,   -1,   74,   75,
+      -1,   -1,   -1,   -1,   76,   -1,   -1,   -1,
+      -1,   -1,   -1,   -1,   -1,   77,   -1,   -1,
+      -1,   78,   -1,   79,   -1,   -1,   80,   -1,
+      -1,   -1,   -1,   -1,   -1,   81,   -1,   -1,
+      -1,   82,   83,   84,   -1,   85,   -1,   86,
+      -1,   -1,   -1,   87,   88,   -1,   -1,   -1,
+      89,   -1,   -1,   -1,   90,   91,   92,   -1,
+      93,   -1,   -1,   94,   -1,   -1,   -1,   -1,
+      -1,   -1,   -1,   -1,   -1,   95,   -1,   96,
+      97,   98,   -1,   -1,   99,   -1,  100,  101,
+      -1,  102,   -1,   -1,  103,   -1, -624,   -1,
+     106,  107, -157,   -2,  108,   -1,  109,   -1,
+      -1,   -1,  110,  111,   -1,   -1,  112,  113,
+      -1,   -1,   -1,   -1,  114,  115,   -1,   -1,
+      -1,  116,  117,   -1,  118,   -1,   -1,  119,
+      -1,   -1,   -1,  120,   -1,   -1,  121,   -1,
+     122,  123,   -1,   -1,   -1,   -1,   -1,   -1,
+      -1,   -1,  124,  125,   -1,   -1,  126,   -1,
+     127,   -1,  128,   -1,   -1,   -1,  129,   -1,
+      -1,   -1,  130,   -1,   -1,  131,  132,   -1,
+     133,   -1,  134,  135,   -1,   -1,   -1,   -1,
+      -1,  136,   -1,   -1,  137,   -1,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-      -1,  136,  137,   -1,  138,   -1,   -1,  139,
-     140,   -1,   -1,   -1,  141,  142,  143,  144,
-      -1,   -1,  145,  146,   -1,   -1,  147,   -1,
-     148,   -1,   -1,  149,  150,   -1,   -1,   -1,
-      -1,  151,   -1,   -1,   -1,  152,  153,   -1,
-      -1,   -1,  154,   -1,   -1,   -1,   -1,   -1,
+      -1,  138,  139,   -1,  140,   -1,   -1,  141,
+     142,   -1,   -1,   -1,  143,  144,  145,  146,
+      -1,   -1,  147,  148,   -1,   -1,  149,   -1,
+     150,   -1,   -1,  151,  152,   -1,   -1,   -1,
+      -1,  153,   -1,   -1,   -1,  154,  155,   -1,
+      -1,   -1,  156,   -1,   -1,   -1,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-      -1,   -1,   -1,   -1,   -1,   -1,  155,  156,
-      -1,   -1,   -1,   -1,  157,   -1,  158,  159,
-      -1,  160,   -1,   -1,   -1,   -1,   -1,  161,
-      -1,   -1,   -1,  162,  163,   -1,   -1,   -1,
-      -1,   -1,   -1,   -1,   -1,  164,  165,  166,
+      -1,   -1,   -1,   -1,   -1,   -1,  157,  158,
+      -1,   -1,   -1,   -1,  159,   -1,  160,  161,
+      -1,  162,   -1,   -1,   -1,   -1,   -1,  163,
+      -1,   -1,   -1,  164,  165,   -1,   -1,   -1,
+      -1,   -1,   -1,   -1,   -1,  166,  167,  168,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-     167,  168,   -1,   -1,   -1,  169,  170,   -1,
-      -1,   -1,   -1,   -1,   -1,  171,  172,   -1,
-      -1,   -1,   -1,  173,   -1,   -1,   -1,   -1,
-      -1,  174,   -1,   -1,   -1,  175,  176,   -1,
-      -1,   -1,   -1,  177,   -1,   -1,   -1,   -1,
-     178,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-     179,  180,  181,   -1,   -1,  182,   -1,   -1,
-      -1,   -1,  183,  184,  185,   -1,   -1,   -1,
-      -1,  186,   -1,   -1,   -1,  187,  188,  189,
-      -1,   -1,   -1,   -1,  190,   -1,  191,  192,
-      -1,  193,   -1,   -1,   -1,   -1,  194,   -1,
+     169,  170,   -1,   -1,   -1,  171,  172,   -1,
+      -1,   -1,   -1,   -1,   -1,  173,  174,   -1,
+      -1,   -1,   -1,  175,   -1,   -1,   -1,   -1,
+      -1,  176,   -1,   -1,   -1,  177,  178,   -1,
+      -1,   -1,   -1,  179,   -1,   -1,   -1,   -1,
+     180,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
+     181,  182,  183,   -1,   -1,  184,   -1,   -1,
+      -1,   -1,  185,  186,  187,   -1,   -1,   -1,
+      -1,  188,   -1,   -1,   -1,  189,  190,  191,
+      -1,   -1,   -1,   -1,  192,   -1,  193,  194,
+      -1,  195,   -1,   -1,   -1,   -1,  196,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-      -1,   -1,   -1,  195,  196,   -1,   -1,  197,
-      -1,  198,   -1,   -1,   -1,   -1,   -1,  199,
-      -1,   -1,  200,   -1,   -1,   -1,  201,  202,
-      -1,   -1,   -1,   -1,   -1,  203,  204,   -1,
-      -1,   -1,   -1,   -1,   -1,   -1,  205,  206,
-     207,   -1,   -1,   -1,  208,  209,   -1,  210,
-     211,  212,   -1,   -1,   -1,  213,   -1,   -1,
-      -1,   -1,  214,   -1,   -1,   -1,   -1,  215,
-      -1,   -1,   -1,   -1,  216,   -1,   -1,   -1,
-      -1,   -1,  217,   -1,   -1,   -1,   -1,   -1,
+      -1,   -1,   -1,  197,  198,   -1,   -1,  199,
+      -1,  200,   -1,   -1,   -1,   -1,   -1,  201,
+      -1,   -1,  202,   -1,   -1,   -1,  203,  204,
+      -1,   -1,   -1,   -1,   -1,  205,  206,   -1,
+      -1,   -1,   -1,   -1,   -1,   -1,  207,  208,
+     209,   -1,   -1,   -1,  210,  211,   -1,  212,
+     213,  214,   -1,   -1,   -1,  215,   -1,   -1,
+      -1,   -1,  216,   -1,   -1,   -1,   -1,  217,
+      -1,   -1,   -1,   -1,  218,   -1,   -1,   -1,
+      -1,   -1,  219,   -1,   -1,   -1,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-      -1,  218,   -1,   -1,   -1,  219,   -1,   -1,
-      -1,   -1,  220,   -1,   -1,   -1,  221,   -1,
-      -1,   -1,   -1,   -1,  222,  223,   -1,   -1,
+      -1,  220,   -1,   -1,   -1,  221,   -1,   -1,
+      -1,   -1,  222,   -1,   -1,   -1,  223,   -1,
+      -1,   -1,   -1,   -1,  224,  225,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-      -1,   -1,   -1,   -1,   -1,   -1,  224,   -1,
-     225,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-      -1,   -1,   -1,  226,   -1,   -1,   -1,   -1,
+      -1,   -1,   -1,   -1,   -1,   -1,  226,   -1,
+     227,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
+      -1,   -1,   -1,  228,   -1,   -1,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-      -1,   -1,   -1,  227,   -1,   -1,   -1,   -1,
-      -1,   -1,   -1,   -1,  228,   -1,   -1,   -1,
-      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-      -1,  229,   -1,   -1,   -1,   -1,   -1,   -1,
+      -1,   -1,   -1,  229,   -1,   -1,   -1,   -1,
+      -1,   -1,   -1,   -1,  230,   -1,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-      -1,   -1,   -1,   -1,   -1,   -1,   -1,  230,
-      -1,   -1,  231,   -1,  232,   -1,   -1,   -1,
-      -1,   -1,   -1,   -1,   -1,  233,   -1,   -1,
+      -1,  231,   -1,   -1,   -1,   -1,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-      -1,   -1,   -1,   -1,   -1,   -1,  234,   -1,
-      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
+      -1,   -1,   -1,   -1,   -1,   -1,   -1,  232,
+      -1,   -1,  233,   -1,  234,   -1,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,  235,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-     236,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
+      -1,   -1,   -1,   -1,   -1,   -1,  236,   -1,
+      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
+      -1,   -1,   -1,   -1,   -1,  237,   -1,   -1,
+      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
+      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
+     238,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-      -1,   -1,  237,   -1,   -1,   -1,   -1,   -1,
+      -1,   -1,  239,   -1,   -1,   -1,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-      -1,   -1,  238,   -1,   -1,   -1,  239,   -1,
+      -1,   -1,  240,   -1,   -1,   -1,  241,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-      -1,  240,  241,   -1,   -1,   -1,   -1,   -1,
-      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-      -1,   -1,  242,   -1,   -1,   -1,  243,   -1,
-     244,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
+      -1,  242,  243,   -1,   -1,   -1,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-      -1,   -1,   -1,  245,   -1,  246,   -1,   -1,
-      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-      -1,   -1,   -1,   -1,   -1,   -1,  247,   -1,
+      -1,   -1,  244,   -1,   -1,   -1,  245,   -1,
+     246,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
+      -1,   -1,   -1,  247,   -1,  248,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-      -1,  248,   -1,   -1,   -1,   -1,   -1,   -1,
-     249,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
+      -1,   -1,   -1,   -1,   -1,   -1,  249,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-      -1,   -1,   -1,   -1,  250,   -1,   -1,   -1,
-      -1,   -1,   -1,   -1,   -1,   -1,  251,   -1,
+      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
+      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
+      -1,  250,   -1,   -1,   -1,   -1,   -1,   -1,
+     251,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
       -1,   -1,   -1,   -1,  252,   -1,   -1,   -1,
-      -1,  253,   -1,   -1,   -1,   -1,   -1,   -1,
-      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-     254,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
+      -1,   -1,   -1,   -1,   -1,   -1,  253,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
+      -1,   -1,   -1,   -1,  254,   -1,   -1,   -1,
+      -1,  255,   -1,   -1,   -1,   -1,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-      -1,   -1,   -1,   -1,   -1,  255,   -1,   -1,
-      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-      -1,  256,   -1,   -1,   -1,   -1,   -1,   -1,
+     256,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
@@ -548,12 +534,28 @@ static const short lookup[] =
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-     257,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
+      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
+      -1,   -1,   -1,   -1,   -1,  257,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
       -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
-      -1,   -1,   -1,   -1,  258
+      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
+      -1,  258,   -1,   -1,   -1,   -1,   -1,   -1,
+      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
+      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
+      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
+      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
+      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
+      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
+      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
+      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
+     259,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
+      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
+      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
+      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
+      -1,   -1,   -1,   -1,   -1,   -1,   -1,   -1,
+      -1,   -1,   -1,   -1,  260
   };
 
 #ifdef __GNUC__
@@ -596,4 +598,3 @@ findEntity (register const char *str, register unsigned int len)
     }
   return 0;
 }
-
