@@ -33,15 +33,16 @@ struct entity {
 };
 %%
 AElig, 0x00c6
+AMP, 38
 Aacute, 0x00c1
 Acirc, 0x00c2
 Agrave, 0x00c0
 Alpha, 0x0391
-AMP, 38
 Aring, 0x00c5
 Atilde, 0x00c3
 Auml, 0x00c4
 Beta, 0x0392
+COPY, 0x00a9
 Ccedil, 0x00c7
 Chi, 0x03a7
 Dagger, 0x2021
@@ -53,16 +54,16 @@ Egrave, 0x00c8
 Epsilon, 0x0395
 Eta, 0x0397
 Euml, 0x00cb
-Gamma, 0x0393
 GT, 62
+Gamma, 0x0393
 Iacute, 0x00cd
 Icirc, 0x00ce
 Igrave, 0x00cc
 Iota, 0x0399
 Iuml, 0x00cf
 Kappa, 0x039a
-Lambda, 0x039b
 LT, 60
+Lambda, 0x039b
 Mu, 0x039c
 Ntilde, 0x00d1
 Nu, 0x039d
@@ -80,6 +81,7 @@ Pi, 0x03a0
 Prime, 0x2033
 Psi, 0x03a8
 QUOT, 34
+REG, 0x00ae
 Rho, 0x03a1
 Scaron, 0x0160
 Sigma, 0x03a3
@@ -258,10 +260,10 @@ spades, 0x2660
 sub, 0x2282
 sube, 0x2286
 sum, 0x2211
+sup, 0x2283
 sup1, 0x00b9
 sup2, 0x00b2
 sup3, 0x00b3
-sup, 0x2283
 supe, 0x2287
 supl, 0x00b9
 szlig, 0x00df
@@ -292,4 +294,3 @@ zeta, 0x03b6
 zwj, 0x200d
 zwnj, 0x200c
 %%
-
