@@ -1,5 +1,11 @@
 2004-04-05  Darin Adler  <darin@apple.com>
 
+        * khtml/html/kentities.gperf: Added &COPY; and &REG;, both supported by Gecko
+        (and presumably by WinIE). Also re-sorted the list.
+        * khtml/html/kentities.c: Regenerated.
+
+2004-04-05  Darin Adler  <darin@apple.com>
+
         Reviewed by Dave.
 
         - rolled over fix from KHTML tree; anchor inside another anchor
